# carolus-server

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  readme.md
carolus-cli/: Cargo.toml
carolus-cli/src/: main.rs  movies.rs  partial_file.rs
data/: Cargo.toml
data/src/: init.rs  lib.rs  models.rs  movies.rs
file-index/: Cargo.toml
file-index/src/: file_name.rs  index.rs  lib.rs
migrations/: 001-create_movies.sql  002-create_tv.sql
migrations/2017-10-25-192947_create_movies/: down.sql  up.sql
migrations/2017-12-09-121739_create_tv/: down.sql  up.sql
provider/: Cargo.toml
provider/src/: lib.rs  themoviedb.rs
src/: card.rs  data.rs  main.rs  media_api.rs  movies.rs  partial_file.rs  tv.rs  video.rs
src/data/: init.rs  mod.rs  models.rs  movies.rs  schema.rs  tv.rs  tv_episodes.rs  tv_series.rs  tv_shows.rs
src/file_index/: file_name.rs  index.rs  mod.rs  parse_movie.rs  parse_tv.rs
src/provider/: metadata_agent.rs  mod.rs  themoviedb.rs
