[package]
name = "carolus"
version = "0.1.0"
authors = ["Simon Dickson <simon@simonhdickson.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = "0.9"
chrono = "0.4"
reqwest = "*"
url = "1.7"
serde_json = "1.0"
glob = "0.2"
blake2 = "0.6"
digest = { version = "0.6", features = ["std"]}
base64 = "0.7.0"
regex = "0.2"
log = "0.4"
failure = "0.1"
hyper = "0.10"

[features]
tls = ["rocket/tls"]
sqlite-bundled = ["libsqlite3-sys/bundled"]
