[package]
name = "carolus"
version = "0.1.0"
authors = ["Simon Dickson <simon@simonhdickson.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_derive = "1.0"
file_index  = { path = "../file-index" }
data  = { path = "../data" }
provider = { path = "../provider" }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
